// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`animate next classNames 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide animateOut next"
    />
    <div
      className="slide animateIn next"
    />
    <div
      className="slide hidden"
    />
  </div>
</div>
`;

exports[`animate previous classNames 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide animateOut previous"
    />
    <div
      className="slide hidden"
    />
    <div
      className="slide animateIn previous"
    />
  </div>
</div>
`;

exports[`renders one child 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`renders three children 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
    <div
      className="slide next"
    />
    <div
      className="slide previous"
    />
  </div>
</div>
`;

exports[`renders two children 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
    <div
      className="slide next"
    />
  </div>
</div>
`;

exports[`test autoslide enabled 1`] = `
<div
  className="slider"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <a
    className="previousButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide previous"
    />
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with one child can not navigate to next 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with one child can not navigate to previuous 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with two children can navigate to next 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide previous"
    />
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with two children can navigate to next only once 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide previous"
    />
    <div
      className="slide current"
    />
  </div>
</div>
`;

exports[`with two children can not navigate to previuous 1`] = `
<div
  className="slider"
>
  <a
    className="previousButton disabled"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(180 10 15)"
      />
    </svg>
  </a>
  <a
    className="nextButton"
    onClick={[Function]}
  >
    <svg
      height="30"
      viewBox="0 0 20 30"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polygon
        fill="#000"
        points="20 15 4.228 0 0 3.626 11.954 15 0 26.374 4.228 30"
        transform="rotate(0 10 15)"
      />
    </svg>
  </a>
  <div
    className="track"
  >
    <div
      className="slide current"
    />
    <div
      className="slide next"
    />
  </div>
</div>
`;
